test/files/neg/noMember2.scala
object Test {
  val m = scala.collection.IterableOps(1, 2, 3)
}
