test/files/neg/noMember2.check
noMember2.scala:2: error: object IterableOps is not a member of package collection
Note: trait IterableOps exists, but it has no companion object.
  val m = scala.collection.IterableOps(1, 2, 3)
                           ^
one error found
